local-cluster/namespaces/dev/echo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong-external
  rules:
    - host: da.com
      http:
        paths:
          - path: /api/echo
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
spec:
  ports:
    - port: 8080
      name: high
      protocol: TCP
      targetPort: 80
    - port: 80
      name: low
      protocol: TCP
      targetPort: 80
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echo
    spec:
      containers:
        - image: ealen/echo-server
          name: echo
          ports:
            - containerPort: 80
          resources: {}
